--- a/ProjectSpace/app/src/main/res/layout/activity_services_remind.xml
+++ b/ProjectSpace/app/src/main/res/layout/activity_services_remind.xml
@@ -5,7 +5,36 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ServicesRemindActivity">
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="返回"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:text="@string/activity_name_AL_service_remind"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:text="设置"/>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/txtHelloWorld"
