数据结构完成，引入工具BaseRecyclerViewAdapterHelper，界面搭建，还没显示

--- a/ProjectSpace/app/src/main/res/layout/activity_services_remind.xml
+++ b/ProjectSpace/app/src/main/res/layout/activity_services_remind.xml
@@ -5,19 +5,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/grey">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:background="@color/white">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="返回"/>
+                android:text="左箭头"/>
 
             <TextView
                 android:layout_width="0dp"
@@ -32,13 +34,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
-                android:text="设置"/>
+                android:text="齿轮"/>
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/txtHelloWorld"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recServicesRemind"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
     </LinearLayout>
 </layout>
