--- a/ProjectSpace/app/src/main/res/layout/activity_services_remind.xml
+++ b/ProjectSpace/app/src/main/res/layout/activity_services_remind.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/grey">
+        android:background="@color/grey_99">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,6 +41,6 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recServicesRemind"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
     </LinearLayout>
 </layout>
