--- a/ProjectSpace/app/src/main/res/layout/item_services_remind_express.xml
+++ b/ProjectSpace/app/src/main/res/layout/item_services_remind_express.xml
@@ -19,6 +19,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="6dp"
             android:text="图" />
 
         <TextView
@@ -32,6 +33,7 @@
             android:id="@+id/txtServerTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
             android:maxLines="1" />
     </LinearLayout>
 
