--- a/ProjectSpace/app/src/main/res/values/colors.xml
+++ b/ProjectSpace/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="grey">#D9D9D9</color>
+    <color name="grey_99">#99D9D9D9</color>
 </resources>
