--- a/ProjectSpace/app/src/main/res/layout/activity_all_app.xml
+++ b/ProjectSpace/app/src/main/res/layout/activity_all_app.xml
@@ -3,27 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/scvAllApps"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingStart="@dimen/dp_10"
-        android:paddingEnd="@dimen/dp_10">
+        android:layout_height="match_parent">
 
-        <TextView
+        <LinearLayout
+            android:id="@+id/linAllAppsRoot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="便民生活"
-            android:textColor="@color/black"/>
-
-        <GridView
-            android:id="@+id/gridApps"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:horizontalSpacing="15dp"
-            android:verticalSpacing="20dp"
-            android:numColumns="5"
-            android:gravity="center"/>
-    </LinearLayout>
+            android:orientation="vertical"/>
+    </ScrollView>
 
 </layout>
