准备做一个仿微信聊天界面，先搭个架子，后面有空再填坑

--- a/ProjectSpace/app/src/main/res/layout/activity_laucher.xml
+++ b/ProjectSpace/app/src/main/res/layout/activity_laucher.xml
@@ -19,6 +19,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="服务提醒"/>
+
+        <Button
+            android:id="@+id/btnChat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="聊天"/>
     </LinearLayout>
 
 </layout>
