--- a/ProjectSpace/app/src/main/res/layout/activity_chat.xml
+++ b/ProjectSpace/app/src/main/res/layout/activity_chat.xml
@@ -24,8 +24,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:ellipsize="marquee"
-                android:singleLine="true" />
+                android:maxLines="1"
+                android:ellipsize="end"/>
 
             <TextView
                 android:id="@+id/txtChat3Dot"
@@ -36,9 +36,11 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recChatContent"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="@color/grey_99"/>
 
         <LinearLayout
             android:layout_width="match_parent"
