完成发送消息

--- a/ProjectSpace/app/src/main/res/layout/activity_chat.xml
+++ b/ProjectSpace/app/src/main/res/layout/activity_chat.xml
@@ -54,10 +54,12 @@
                 android:text="语音" />
 
             <EditText
+                android:id="@+id/edtChat"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@null" />
+                android:background="@null"
+                android:imeOptions="actionSend"/>
 
             <TextView
                 android:id="@+id/txtChatExpression"
