--- a/ProjectSpace/app/src/main/res/layout/item_regions.xml
+++ b/ProjectSpace/app/src/main/res/layout/item_regions.xml
@@ -5,15 +5,10 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/txtRegionsCode"
+        android:id="@+id/txtRegionName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp" />
-
-    <androidx.leanback.widget.HorizontalGridView
-        android:id="@+id/hgRegions"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
 
 </LinearLayout>
