--- a/ProjectSpace/app/src/main/res/layout/item_regions.xml
+++ b/ProjectSpace/app/src/main/res/layout/item_regions.xml
@@ -7,8 +7,6 @@
     <TextView
         android:id="@+id/txtRegionName"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp" />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
