--- a/ProjectSpace/app/src/main/res/layout/item_some_regions.xml
+++ b/ProjectSpace/app/src/main/res/layout/item_some_regions.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/txtRegionsCode"
-        android:layout_width="wrap_content"
+        android:layout_width="10dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp" />
