--- a/ProjectSpace/app/src/main/res/layout/activity_laucher.xml
+++ b/ProjectSpace/app/src/main/res/layout/activity_laucher.xml
@@ -31,6 +31,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="省份选择"/>
+
+        <Button
+            android:id="@+id/btnAIDL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="AIDL"/>
     </LinearLayout>
 
 </layout>
