--- a/ProjectSpace/app/src/main/res/layout/activity_laucher.xml
+++ b/ProjectSpace/app/src/main/res/layout/activity_laucher.xml
@@ -37,6 +37,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="AIDL"/>
+
+        <Button
+            android:id="@+id/btnListKotlin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="列表页面 Kotlin"/>
+
     </LinearLayout>
 
 </layout>
